src/test/deca/context/valid/objet/this_01.deca
// Description:
//    Programme minimaliste utilisant this.
//
// Resultats:
//
//
// Historique:
//    cree le 04/01/2023

class A{
    protected A a = this;
}

