src/test/deca/context/invalid/objet/protected_field1.deca
// Description:
//     Protected non atteignable.
//
// Resultats:
//    Error
//
// Historique:
//    cree le 01/01/2023

class A{
    protected int x;
}

{
    A a = new A();
    a.x;
}


